- Use sh instead of bash for scripts running in alpine - Fixed other bugs

--- a/ci/tasks/create-image-par.yml
+++ b/ci/tasks/create-image-par.yml
@@ -8,6 +8,7 @@ image_resource:
 inputs:
   - name: stemcell
   - name: version
+  - name: oci-config
   - name: light-stemcell-builder
 outputs:
   - name: image-par
