Enhancementa and a bug fix in preauth request creation   - Accept duration as a parameter to set the expiry date. Can be specified as the input accepted by the linux date command. E.g. "+10 days", "+1 year", "+2 months" etc.   - Fixed bug in command used to determine if versioned_image already exists   - Use --force when uploading the image to the object store Configure pipeline to run build against https://github.com/oracle/bosh-linux-stemcell-builder/tree/oracle_stemcell_feature

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -32,6 +32,7 @@ jobs:
            oracle_apikey: ((oracle-apikey))
            oracle_namespace: ((oracle-namespace))
            oracle_stemcell_bucket:  ((stemcell-bucket))
+           duration: ((light-stemcell-validity-duration))
 
        - task: build-light-stemcell
          file: light-stemcell-builder/ci/tasks/build-light-stemcell.yml
@@ -50,7 +51,7 @@ resources:
   - name: bosh-linux-stemcell-builder
     type: git
     source:
-      uri: https://github.com/dmutreja/bosh-linux-stemcell-builder
+      uri: https://github.com/oracle/bosh-linux-stemcell-builder
       branch: oracle_stemcell_feature
       username: ((github-user))
       password: ((github-password))
