--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,20 +1,81 @@
+task-definitions:
+  - &terraform-setup
+    task: prepare-terraform-env
+    file: light-stemcell-builder/ci/tasks/prepare-terraform-env.yml
+    params:
+      oracle_tenancy: ((oracle-tenancy))
+      oracle_user: ((oracle-user))
+      oracle_region: ((oracle-region))
+      oracle_fingerprint: ((oracle-fingerprint))
+      oracle_apikey: ((oracle-apikey))
+      director_vcn: ((director-vcn))
+      director_compartment_name: ((director-compartment-name))
+      director_ad: ((director-ad))
+      director_subnet_cidr: ((director-subnet-cidr))
+
+  - &terraform-apply
+    put: terraform-state
+    params:
+      terraform_source: light-stemcell-builder/ci/terraform
+      env_name:  light-stemcell-builder-env
+      var_files: [terraform-env/oci.vars]
+      plugin_dir: /.terraform.d/plugins/linux_amd64
+
+  - &prepare-director-env
+    task: prepare-director-env
+    file: light-stemcell-builder/ci/tasks/prepare-director-env.yml
+    params:
+      oracle_tenancy: ((oracle-tenancy))
+      oracle_user: ((oracle-user))
+      oracle_region: ((oracle-region))
+      oracle_fingerprint: ((oracle-fingerprint))
+      oracle_apikey: ((oracle-apikey))
+
+  - &terraform-destroy
+    put: terraform-state
+    params:
+      terraform_source: light-stemcell-builder/ci/terraform
+      env_name: light-stemcell-builder-env
+      action: destroy
+      var_files: [terraform-env/oci.vars]
+      plugin_dir: /.terraform.d/plugins/linux_amd64
+    get_params:
+        action: destroy
+
+  - &setup-director
+    task: setup-director
+    file: light-stemcell-builder/ci/tasks/setup-director.yml
+    input_mapping: {stemcell: light-stemcell}
+
+  - &teardown-director
+    task: teardown-director
+    file: light-stemcell-builder/ci/tasks/teardown-director.yml
+
 groups:
  - name: light-oracle-ubuntu-stemcell
    jobs:
-     - build-and-publish-stemcell
+     - build-light-stemcell
+     - publish-light-stemcell
 
 
 jobs:
-   - name: build-and-publish-stemcell
+   - name: build-light-stemcell
      serial: true
      plan:
-       - {trigger: true, get: stemcells-index, resource: stemcells-index}
-       - {trigger: true, get: bosh-linux-stemcell-builder,   resource: bosh-linux-stemcell-builder}
-       - {trigger: false, get: version,   params: {bump: minor}}
-       - {trigger: true, get: light-stemcell-builder,   resource: bosh-oracle-light-stemcell-builder}
+       - aggregate:
+         - {trigger: true, get: stemcells-index, resource: stemcells-index}
+         - {trigger: true, get: bosh-linux-stemcell-builder,   resource: bosh-linux-stemcell-builder}
+         - {trigger: false, get: cpi-release-src, resource: bosh-cpi-release-src}
+         - {trigger: false, get: cpi-release-semver}
+         - {trigger: true, get: light-stemcell-builder,   resource: bosh-oracle-light-stemcell-builder}
+         - {trigger: false, get: stemcell-semver, params: {bump: minor}}
+         - {trigger: true, get: fixture-ssh-keys, resource: fixture-env, params: {file: oci-config.tgz, unpack: true}}
 
-       - task: build-stemcell
+
+       - task: build-full-stemcell
          file: bosh-linux-stemcell-builder/ci/tasks/build.yml
+         input_mapping: {version: stemcell-semver}
+
          privileged: true
          params:
            IAAS: oracle
@@ -40,18 +101,51 @@ jobs:
            name: light-oracle-ubuntu-trusty
            os: ubuntu-trusty
 
+       - task: download-cpi-release
+         file: light-stemcell-builder/ci/tasks/download-cpi.yml
+         params:
+          oracle_tenancy:                 ((oracle-tenancy))
+          oracle_user:                    ((oracle-user))
+          oracle_region:                  ((oracle-region))
+          oracle_fingerprint:             ((oracle-fingerprint))
+          oracle_apikey:                  ((oracle-apikey))
+          oracle_namespace:               ((oracle-namespace))
+          oracle_bucket:                  ((cpi-final-release-bucket))
+          cpi_release_name:               bosh-oracle-cpi
+
+       - <<: *terraform-setup
+       - <<: *terraform-apply
+       - <<: *prepare-director-env
+       - do:
+         - <<: *setup-director
+         ensure:
+           do:
+             - <<: *teardown-director
+             - <<: *terraform-destroy
+
        - put: light-stemcell-bucket
          params:
            file: light-stemcell/light-oracle-ubuntu-trusty-*.tgz
 
-       - put: version
-         params: {file: version/version}
+   - name: publish-light-stemcell
+     serial: true
+     plan:
+       - {trigger: false, get: stemcell-semver}
+
+       - put: stemcell-semver
+         params: {file: stemcell-semver/version}
+
+resource_types:
+  - name: terraform
+    type: docker-image
+    source:
+      repository: dmutreja/oci-terraform-resource
 
 resources:
   - name: bosh-linux-stemcell-builder
     type: git
     source:
-      uri: https://github.com/oracle/bosh-linux-stemcell-builder
+      uri: https://github.com/dmutreja/bosh-linux-stemcell-builder
       branch: oracle_stemcell_feature
       username: ((github-user))
       password: ((github-password))
@@ -72,7 +166,7 @@ resources:
       username: ((github-user))
       password: ((github-password))
 
-  - name: version
+  - name: stemcell-semver
     type: semver
     source:
       driver: s3
@@ -84,6 +178,17 @@ resources:
       endpoint: https://((oracle-namespace)).compat.objectstorage.((oracle-region)).oraclecloud.com
       initial_version: 2001.0.0
 
+  - name: cpi-release-semver
+    type: semver
+    source:
+      driver: s3
+      key: current-final-version
+      bucket: ((version-semver-bucket-name))
+      access_key_id: ((oracle-s3-access-key-id))
+      secret_access_key: ((oracle-s3-secret-access-key))
+      region_name: ((oracle-region))
+      endpoint: https://((oracle-namespace)).compat.objectstorage.((oracle-region)).oraclecloud.com
+
   - name: light-stemcell-bucket
     type: s3
     source:
@@ -91,6 +196,37 @@ resources:
        region_name: ((oracle-region))
        bucket: ((stemcell-bucket))
        regexp: light-oracle-ubuntu-trusty-(.*)\.tgz
+       access_key_id: ((oracle-s3-access-key-id))
+       secret_access_key: ((oracle-s3-secret-access-key))
+       private: true
+
+  - name: terraform-state
+    type: terraform
+    source:
+       storage:
+         bucket: ((oracle-fixture-env-bucket-name))
+         bucket_path: terraform-ci/
+         access_key_id: ((oracle-s3-access-key-id))
+         secret_access_key: ((oracle-s3-secret-access-key))
+         region_name: ((oracle-region))
+         endpoint: https://((oracle-namespace)).compat.objectstorage.((oracle-region)).oraclecloud.com
+         use_signing_v4: true
+
+  - name: bosh-cpi-release-src
+    type: git
+    source:
+      uri: https://github.com/((github-org))/bosh-oracle-cpi-release.git
+      branch: ((cpi-release-branch))
+      username: ((github-user))
+      password: ((github-password))
+
+  - name: fixture-env
+    type: s3
+    source:
+       endpoint: https://((oracle-namespace)).compat.objectstorage.((oracle-region)).oraclecloud.com
+       region_name: ((oracle-region))
+       bucket: ((oracle-fixture-env-bucket-name))
+       regexp: (.*)\.tgz
        access_key_id: ((oracle-s3-access-key-id))
        secret_access_key: ((oracle-s3-secret-access-key))
        private: true
