--- a/ci/tasks/build-light-stemcell.yml
+++ b/ci/tasks/build-light-stemcell.yml
@@ -6,7 +6,7 @@ image_resource:
     repository: alpine
     tag: "latest"
 inputs:
-  - name: version
+  - name: stemcell-semver
   - name: image-par
   - name: light-stemcell-builder
 outputs:
