oracle_stemcell_feature merged to oracle_stemcell_base branch. Build full stemcell from oracle_stemcell_base

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -137,7 +137,7 @@ resources:
     type: git
     source:
       uri: https://github.com/oracle/bosh-linux-stemcell-builder
-      branch: oracle_stemcell_feature
+      branch: oracle_stemcell_base
       username: ((github-user))
       password: ((github-password))
 
